--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "chrome-remote-interface": "^0.25.7",
         "chromeless": "^1.5.2",
+        "jsdom": "^16.5.3",
         "puppeteer": "^9.1.1"
     }
 }
