--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "jest": {
+        "transform": {
+            "^.+\\.[t|j]sx?$": "babel-jest"
+        }
+    },
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "jest:clean": "jest --clearCache"
     },
     "keywords": [
         "js",
@@ -13,9 +19,12 @@
     "author": "k0tk4",
     "license": "ISC",
     "devDependencies": {
-        "jest": "^26.6.3"
+        "jest": "^26.6.3",
+        "ts-jest": "^26.5.6"
     },
     "dependencies": {
+        "@vue/cli-plugin-babel": "^4.5.13",
+        "babel-jest": "^26.6.3",
         "chrome-remote-interface": "^0.25.7",
         "chromeless": "^1.5.2",
         "jsdom": "^16.5.3",
